--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "sail-up": [
+            "./vendor/bin/sail up"
         ]
     },
     "extra": {
